# MARS2_Track1_Ferret

./: .gitignore  README.md  format_ferret_answer.py  pyproject.toml
ferret/eval/: model_refcoco.py
